"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-04-20	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-19-merged-scm-01-37:
	  Branch merge of chpsim/guile/scheme dissertation work, building
		a framework for versatile trace profiling.  
	  Summary: primitives in C++/guile, scheme code, basic static
		and trace analyses, and more scheme code.
		Provide sequential and random access to tracefiles as stream.
	  Fixes: chpsim's trace_manager wasn't updating previous_events.
	  TODO: automatic documentation assembly (texinfo)


2007-04-19	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-15-scm-01-37:
	  No source revision.
	  We unfortunately have to merge this branch earlier than expected.
		chpsim's channel model needs to be redone, becuse I discovered
		that the occupancy-bit model of channels introduces slack 1
		on every channel and half-decouples send/receive pairs.
	  *SIGH* Fix and re-verification will occur on new branch, following
		this merge.  


	* HACKT-00-01-04-main-00-81-15-scm-01-36:
	  Scheme-only revision: see scm/ChangeLog: 
		fork-join static maps and do-while set, more test cases...


2007-04-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-18:
	  Virantha wins the lottery!  He is the first person to 
		exceed the 255 term limit of prs expressions in prsim,
		i.e. immediate children of PRS_AND/OR limit.
		Prior to this patch, result would be assert failure.
	  sim/prsim/Expr.h: now define HUGE_MAX_EXPR_COUNT to use
		unsigned short to increase range, at the cost of memory bloat.
	  sim/prsim/ExprAlloc.cc, State-prsim.cc:
		better diagnostics in the rare event of an exception.
	  Added expect-fail test case for graceful failure.
	  Wish: future re-instate the 255 limit again.  


2007-04-17	David Fang		<fangism@users.sourceforge.net>
